--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
+		<img src="Medias/Generate your on flashcards.png" alt="Banner PNG" />
 		<input type="file" id="fileInput" />
-		<button onclick="generateFlashCards()">Generate Flash Cards</button>
+		<button class="big-button" onclick="generateFlashCards()">
+			Generate Flash Cards
+		</button>
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.4/xlsx.full.min.js"></script>
 		<script src="script.js"></script>
 	</body>
